--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,65 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
+<TextView
+    android:id="@+id/etCesta"
+    android:layout_marginLeft="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="35dp"
+    android:textStyle="bold"/>
+    <LinearLayout
+        android:padding="4dp"
+        android:layout_marginTop="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+    <info.hoang8f.widget.FButton
 
-
-    <!--<ListView
+        android:layout_marginRight="2dp"
+        android:id="@+id/btnPridatAdr"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/button"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />-->
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:text="Přidat adresář"
+
+        android:textColor="@color/icons"
+        fbutton:buttonColor="@color/primary_light"
+        fbutton:shadowEnabled="false"
+
+        />
+    <info.hoang8f.widget.FButton
+        android:layout_marginLeft="2dp"
+        android:id="@+id/btnNahratSoubor"
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:text="Nahrát soubor"
+        android:textColor="@color/icons"
+        fbutton:buttonColor="@color/primary_light"
+        fbutton:shadowEnabled="false"
+        /></LinearLayout>
+
     <android.support.v7.widget.RecyclerView
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="95dp"
         android:id="@+id/recyclerViewMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-    <ProgressBar
+
+    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+
+        style="@style/Widget.MaterialProgressBar.ProgressBar.Large"
         />
+
+
 
 </RelativeLayout>
