--- a/app/src/main/res/layout/one_row.xml
+++ b/app/src/main/res/layout/one_row.xml
@@ -3,7 +3,9 @@
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_margin="1dp">
+    android:layout_margin="1dp"
+    cardview:cardBackgroundColor="@color/bcg"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
