--- a/app/src/main/res/layout/one_row.xml
+++ b/app/src/main/res/layout/one_row.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:layout_margin="1dp"
-    cardview:cardBackgroundColor="@color/bcg"
-    >
+    style="?attr/cardStyle">
 
     <RelativeLayout
         android:layout_width="match_parent"
