--- a/app/src/main/res/menu/bottomsheet_dirmenu.xml
+++ b/app/src/main/res/menu/bottomsheet_dirmenu.xml
@@ -5,12 +5,12 @@
     <item
         android:id="@+id/menSmazat"
         android:icon="@drawable/ic_delete_black_24dp"
-        android:title="Smazat" />
+        android:title="@string/smazat" />
 
     <item
         android:id="@+id/menRename"
         android:icon="@drawable/ic_create_black_24dp"
-        android:title="Přejmenovat" />
+        android:title="@string/prejmenovat" />
 
 
 </menu>
